# clawster

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  MEMORY-LAYER-PLAN.md  NM_GATE_VERIFY.md  PROGRESS.md  README.md  TODOS.md  entitlements.mac.plist  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  treehouse.toml  tsconfig.json  tsconfig.main.json  tsconfig.node.tsbuildinfo  vite.config.ts  vite.web.config.ts  vite.widget.config.ts
.github/: CODEOWNERS
.omc/: prd-gaps.json  prd-tests.json  prd.json  progress.txt  project-memory.json
e2e/: analytics.spec.ts  cdp-eval.mjs  chat-sessions.spec.ts  chatbar-curious.spec.ts  cla46-reorder.spec.ts  cla50-feedback-thumbs-timing.spec.ts  cla58-themes.spec.ts  cla58-tidepool-restyle.spec.ts  cla59-capsule-entrance.spec.ts  confirmation-gates.spec.ts  drag-feel.spec.ts  electron-launch.d.mts  electron-launch.mjs  helpers.ts  mute-toggle.spec.ts  new-user-journey.spec.ts  permission-flow.spec.ts  permission-panel.spec.ts  production-smoke.spec.ts  visual-diff.ts
eval/: dataset-blackbox.jsonl  dataset-holdout.ts  dataset.ts  generate-training-data.ts  providers.ts  runner.ts  tools.ts
openclaw/: IDENTITY.md  README.md  SOUL.md
personality/: IDENTITY.md  SOUL.md
proxy/: AGENTS.md  package-lock.json  package.json  tsconfig.json  wrangler.toml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: clawbot.rs  commands.rs  hotkeys.rs  lib.rs  main.rs  onboarding.rs  pet.rs  screen.rs  store.rs  tutorial.rs  watchers.rs  windows.rs  workspace.rs
(+247 files in other folders)
