[package]
name = "clawster"
version = "0.1.5"
description = "Desktop pet companion powered by OpenClaw"
authors = ["Yuwen Wu"]
edition = "2021"

[lib]
name = "clawster_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
tauri-plugin-updater = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
notify = "7"
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
base64 = "0.22"
dirs = "6"
regex-lite = "0.1"
rand = "0.9"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"
